Manually build deb and zip
Use jlink to create a JRE, then package that up with the application.